--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,32 +1,54 @@
 body {
-	padding: 15px 50px;
+    padding: 15px 50px;
+}
+
+.main {
+    padding: 0% 10%;
 }
 
 header h1 {
-	font-size: 40px;
-	border-bottom: 3px solid navy;
+    font-size: 40px;
+    border-bottom: 3px solid navy;
 }
 
-.udatsutop p {
-	padding: 10px;
+.top {
+    width: 40em;
+    padding: 1em;
+    line-height: 1.8em;
+    float: left;
+}
+
+.interest {
+    padding-top: 4.5em;
+    padding-bottom: 2em;
 }
 
 table {
-	border-collapse: collapse;
-	border: solid 1px black;
+    border-collapse: collapse;
+    border: solid 1px black;
 }
 
 table th, table td{
-	border: dashed 1px black;
-	width: 200px;
-	height: 30px;
+    border: dashed 1px black;
+    width: 200px;
+    height: 30px;
 }
 
 table th {
-	padding: 10px;
-	color: navy;
+    padding: 10px;
+    color: navy;
 }
 
 table td {
-	padding: 3px 10px;
+    padding: 3px 10px;
+}
+
+input:hover {
+    box-shadow: 0 0 5px 0  rgba(255, 153, 0, 1);
+    border: 2px solid #FFF;
+    outline: 0;
+}
+
+input {
+    width: 5em;
 }
